@@ -25,28 +25,30 @@ AUX openssl-1.0.2_beta1-perl-5.18.patch 9031 SHA256 05b0333dd324f0ffa7ef0e428991
 DIST openssl-0.9.8y.tar.gz 3785001 SHA256 bbecf13495e612936e3a9860c29c0701413564b7a964bf771a3575eaa867cee3 SHA512 cdc05067343d6b06a0d0278e90abcea9bf58439c98279ce0ce22673bf6f4a6597babcb276635c3b15cf04ec76cf53320236f5b6bbc46544a61280825f5b7b3cc WHIRLPOOL c8c9cb00f303c2d95a1d2000c74bb146fb069da9471093bf7a2c00db2a5955c2d63908b3314eb9cd12ea1e80c3bac143d3774bc27515f2ab03c5ef4d88b61612
 DIST openssl-1.0.0j.tar.gz 4047852 SHA256 626fb8fcb3eb7e966edbe71553ff993d137f6e8a87b05051a3695e621098b8af SHA512 9796c75b4d5de57928708f5f0a8ca01aff5b4974b60006454657ed54c34998bc54d747af03860d319db7e7a57b0cd3c267758ffaac31be2be045c977d5fc33d4 WHIRLPOOL 239f051930d9562e7266edd69cf3a1060d381a95228fd17813dd2dbf469c2cf066786b277c2fd56973b830a6b43f28934f5f15d3b6dfac8f37a6e6a65fcae455
 DIST openssl-1.0.1f.tar.gz 4509212 SHA256 6cc2a80b17d64de6b7bac985745fdaba971d54ffd7d38d3556f998d7c0c9cb5a SHA512 8a50892ce0c32707486e248b273631c38e9743371f28f96b635a9e61dac31919e5cf00690d0926c1f425c718cb56c4fe18a87c6e679e0543ad453e42f7a811ef WHIRLPOOL 4489061d7348a53ed23fd01fbaf36b701c5a17968a4811cf0289aa8604752b1e3b3f4ed53ac629db3948d58fab1d9e0efdae5f6cde39a78828dd8b220fdb3900
+DIST openssl-1.0.1g.tar.gz 4509047 SHA256 53cb818c3b90e507a8348f4f5eaedb05d8bfe5358aabb508b7263cc670c3e028 SHA512 66ebbad3c8ad98a07b486d39d0c3ae62b00133f8f2877cf8b97c461e7c7f40b29cf9c3cae82cf73a92dcf1daa63d33aa76c910fbcbe60158589fc7cb48f41e6d WHIRLPOOL 6bfb30d1f41b051f794e2eb80ad9116b064f6d464c22698538c4e16b85739b80744387ca160fd1a86b92814b5b1b3fc7d0658a709942b7b31b198da8cce37056
 DIST openssl-1.0.2-beta1.tar.gz 4901640 SHA256 4dbb1812d8129c9f1d0444e8947666668844137a52b59722f3f847cff006cf9b SHA512 5e5c36fd05710052d3fc791d0bb52494533e817af5cb9f9d3604e67bbc459f22a4e64a901b38f14f3f949069bc6a9f79dee7ecdce7a362f8285ce9a9ea9e22a6 WHIRLPOOL d6a4b38c256aed2cad98d7e978a2ca61b215bdc1b7f5fdaf5759ebb211da3988f3bc403410f6ac68ca801d2b20b459e4a0d916db7eb6126e87b84d93d5433776
 DIST openssl-c_rehash.sh.1.7 4167 SHA256 4999ee79892f52bd6a4a7baba9fac62262454d573bbffd72685d3aae9e48cee0 SHA512 55e8c2e827750a4f375cb83c86bfe2d166c01ffa5d7e9b16657b72b38b747c8985dd2c98f854c911dfbbee2ff3e92aff39fdf089d979b2e3534b7685ee8b80da WHIRLPOOL c88f06a3b8651f76b6289552cccceb64e13f6697c5f0ce3ff114c781ce1c218912b8ee308af9d087cd76a9600fdacda1953175bff07d7d3eb21b0c0b7f4f1ce1
 EBUILD openssl-0.9.8y.ebuild 4424 SHA256 4250c4201a33cebac72954b5068a335d64ec03b03d4a9c787c90c453c23563f9 SHA512 cb59ccff8f59237b33de7db976201b260f5a28a841bcdf59245261a3d74f05c03fc5c4ff4c49e42c38f29533bfa80c6a753448ae9c3e47842223fe12d8f65fce WHIRLPOOL 5c8c490b9094ef6a1c93275dc39f97e61ae021d2cbbfce362f7deb92f844ced318254b1aa2197230dd42b5874602d5c1d43393547642907cf7c6e00244c05d33
 EBUILD openssl-1.0.0j.ebuild 7035 SHA256 8b8cf5082b7eb04abc02fe452a006dad3b2460f65b016f1a1292af79bfef9980 SHA512 e4a4adfa8fda5d514e35f67e55ee50784ae785598b5889cb5d135bb5805b42c77e42246965cfbb4168bf0c6963961dc7e418f979d26574639e8b30730bb2ddea WHIRLPOOL ad2a6e1fcd89e528acce6c0d5a19bfcc82201776bbddb00154fb915792bde6458054d6352abdfa3e1fd17d2f1409de94f9ae6596c25b9e4d87e212901817da99
 EBUILD openssl-1.0.1f.ebuild 8181 SHA256 444e562daa1950bfbd9c76bb75922ed2ed6bba5fdc229c7b08cf80d370326e1e SHA512 34ebc04c3ea1efade80fa229c9a5e15bfd93c4462d893d410387948ab9760566cc9d84e6414dff96c6d970c85598bac024308e5e0799e0b3b312eefccb579649 WHIRLPOOL d931b949e9cd459eac7d4fb5f32a0c43a00d8083783a393dc4f845e2648f2ff5097a72db5ea450b1f6806336f128776df137af4887ff40d3c29a4b41b360a2ca
+EBUILD openssl-1.0.1g.ebuild 8196 SHA256 1172065f5a23cbf1ec8de1108bd30211cd45917856412817681a0fd885ffdccf SHA512 72319278709c088eda2dd91c7d109d6000fc5ddf05c02c4003e848c41ef6e7c91de57ddbd993325dbd2f19a351ce7b03d4984b6372f6b570979f31cd4120c61d WHIRLPOOL 23e9d65da4c31d562259d2a005596cf944503eecfd2755e9295caab275085fb2665c74cf0f6ad032790817efa4ae652efe2e532b4e07c261e05604e4cfb0c844
 EBUILD openssl-1.0.2_beta1.ebuild 8211 SHA256 1e879cd84aa8bf48d1b3c28f4d5bdb48dac5a31af83fca137a6c53b7495c327b SHA512 a8da2c4343321f0ed28142d29fbecda31b32eb0d38f4091c2376787847a2dfd450bd8f737c738205e8539bd1a0be7751fda80bbf73b4fbafdf4d1e1a31445e9c WHIRLPOOL 2caa79405f23ca11ff2944c31f6304abc4bce31698ed2d7e690975d6cc86cc0d2ccb878799f392e66926ad028f9fb6da8703c5a3dceb9e03b35434a295080809
-MISC ChangeLog 78645 SHA256 220f5c975a020de3939b24b5cc37072ce51a3b5def6be74ac5c4a2bb252083bc SHA512 94be4cc0d063d88e82156067018887e5d98dc8280d63d38c028bd8bdd10e2e4f8626ae4a0469e780967c4bb255d73198f935f34a1508f2543114702ffaaefe7c WHIRLPOOL d22d2c117875a19fdeb69f5389ba41c589ee6a48bb4d23a18520568cc8c4d42b3fdb52f34f2e80c6eec5433db8b344447e9199bce684093c5ed7982c01856a54
+MISC ChangeLog 78767 SHA256 1e6b694aaf1764e564f311ea2bf03d3d186864c93926a9aaff2194a9ea335804 SHA512 ee5ad11f7a7dc0e337943da67276ee835b9341c78807dc0e77d1de2f28159813c33049efc875570b0a2389865e12556f28541262673e4b567fda9a1063cfa801 WHIRLPOOL e4437d0a219d9ad04001b697eda2edb240ed2dc72facdd1dd1d4d24d1ac6b1113ec8cc0ac1a2f6e299d1978f3e023a44156b563898d9e4f744a29e8bd346bd95
 MISC metadata.xml 562 SHA256 5c61e2a07ffdb4ba157e0add7f84ff74458c890092d5e6980fd936dfdb457c34 SHA512 f83769af7ffd223923b72a62db27cbc80ca31925b95b720845b6bedd2a9b52837f70f9da93ee43e272ceb3c8424a8c9f35a31ebd5274bc04c91cd63ace1af844 WHIRLPOOL d98f2af2cf3e13c09ad526a2fe06fe8ef02e1db20fd4e3843f1793a97c9ae6a2897308c84038a9a37d6d68fadc7af6d913b980f4f079dac36ea3860a33aca8c2
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJTLdzJAAoJEPGu1DbS6WIAz4MP/1hoDdHzFt7eyMu9zlZQeN0f
-AV7GmsJfeYEyIy3HAfD2jBKjwaTb7kcMZXIC0TrXL7MqGgApUEvWSiB777tk9bPv
-qMDe12KT9FGHcl4Zm8RdUlMnZjVSxOeshbhSCfE5JZ7nyeOUEkNTpqZDKk7yf5pU
-SnVG06aYitz/zX51O5EsonkfPvQlMUh6QD/+rHPbw2xmvpqkgP05oxkR6xONaquR
-9RN/xE1OOQ2kdoTbaQFXHDdYZq/L3URv4katcaLX0zarwebECIH7oXaSayTQxcok
-lxfWMunjuw2YENa8OmO2Zk8EpdOkAUquyfjYDH/Pzstkg6T1lNlQ20Z/P5OZ/SLL
-lYimrocPBrkPGohxRnm5QgSF05CAiQQP2RjLdQ7BNDMYd+Ap0pUAxUNNZc5ussKQ
-LXAIK7XzM4AYEB4WF7NvsWKmeTI0lJcVI63DeV2lQeIwTuqDvorkkHjDvJZbkcA+
-0FaDhbEbYNvkw28zgq+1dekXppJVHEHScoKc6GvC3sGJK/B02AYX+1ukDaNlJj+H
-UctWlzrz0sXEHqo2Xt3c5QOdd8eIURTzCoKCkzy+TeacLMFGSq8OMj8wKJcU55dj
-ct5ylPcp+BHqpoQKobLo0Z8B954obwD2A8+AvT2X6gYNxiL1vQQ2kpca8hQNEWKx
-ifQUus9PEVcSnwHdUqXU
-=O3BA
+iQIcBAEBCAAGBQJTQuoAAAoJEPGu1DbS6WIAPywP/2s3o+/2BOzhL4XLxUexnCeo
+DGFHcNknimuKLY4zuN0tKyZoe1cMYXS/zSSUWyO/OpccGmHRmg0ZjHQZeSWrh2zT
+581u1RWejPjs5kJJA06dHYc9ZU+7udpbzmZPpc0qg0lNEb6xv36IeR0VhbAYj1Mb
+J66g9R9bjygGpLq/eHceAWhIU9FkaIhvA+zp13UDQBhqC4vlKAHuLZUm3Gj5radw
+csD9ByLDrD8e0cX5dqBp+DwY+kCflvEiq6zUVmGsNNkyZLP5Y63yAx2e7/ahQnmR
+UJSygbhbZe4EXidlow8UXkyur5q64qIjMYyQfFbfZ/7UjJb792fXTKwonkAizt5u
+hN0gwohGObWonAHeB/d4LDFn/MWFQ7XxzP9KrdPZY5qTWy6qB8ckgbz4ctnl6s4m
+SmOn4wbp9iMxv4xh4EAZjfb8araUPmO24k3NVGsjbrzyUN4kTiSLvJk6fjsxw5Te
+qrtwIS5f677cdA9I5h3H8Q3H+zQ37mJAq7YhFRfrNECB+WMjmC32UWjWkgKqdDJH
+RuMSpm168TL5Ln1sHB3JipcyRmqyZsiLHECzm3AD6xJRN2oYXgzgpIDKNWC9Hx33
+kNZ3CAyAgRPVlXpOLD5ABDnHt3wAQb0oEy/RtZAsbrlp+syt2wj87xFAyG/Q+6/o
+TvijSF70VM6T8r97NR7G
+=G1hI
 -----END PGP SIGNATURE-----
